--- a/src/style/base/_variables.scss
+++ b/src/style/base/_variables.scss
@@ -1,5 +1,5 @@
 /**
- * 1. Colors
+ * Colors
  */
 $colors: (
     'red': (
@@ -147,7 +147,7 @@ $colors: (
 }
 
 /**
- * 2. Base
+ * Base
  */
 $base-background-color: color('gray', 'background') !default;
 $base-body-gutter: 0 !default;
@@ -206,18 +206,7 @@ $success-color-active: color('green', 'active') !default;
 }
 
 /**
- * 3. Panel
- */
-$panel-background: #fff !default;
-$panel-gutter: 2rem !default;
-
-:root {
-    --panel-background: #{$panel-background};
-    --panel-gutter: #{$panel-gutter}
-}
-
-/**
- * 4. Page
+ * Page
  */
 $page-gutter: 2rem !default;
 
@@ -226,7 +215,7 @@ $page-gutter: 2rem !default;
 }
 
 /**
- * 5. Button
+ * Button
  */
 $button-padding: 1rem !default;
 $button-font-weight: 600 !default;
@@ -277,7 +266,7 @@ $danger-button-ghost-active-background: color('red', 'background-hover') !defaul
 }
 
 /**
- * 6. Cards
+ * Cards
  */
 $card-padding: 1.5rem !default;
 $card-background: #fff !default;
@@ -288,7 +277,7 @@ $card-background: #fff !default;
 }
 
 /**
- * 7. Form fields
+ * Form fields
  */
 $form-field-padding: 1rem !default;
 $form-field-font-weight: 500 !default;
@@ -301,7 +290,7 @@ $form-field-font-size: 1rem !default;
 }
 
 /**
- * 8. Icons
+ * Icons
  */
 $iconPath: '../icons' !default;
 $icons: (
@@ -556,7 +545,7 @@ $icons: (
 }
 
 /**
- * 8. Form fields
+ * Form fields
  */
 $form-field-padding: 1rem !default;
 $form-field-font-weight: 500 !default;
